<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22dp"
        android:layout_gravity="center|center_vertical"
        android:id="@+id/et_student_name"
        android:hint="@string/add_name"
        />
    <Button
        android:id="@+id/add_button"
        android:layout_height= "wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_button"
        />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:text = "@string/submit_button"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:id="@+id/clear_button"
        android:text="@string/clear_button"/>

    <ImageView
        android:layout_width="@dimen/spinner_width"
        android:layout_height="@dimen/spinner_height"
        android:contentDescription="@string/picasso"
        android:id="@+id/iv_picasso"
        android:layout_gravity="bottom|end"/>
</LinearLayout>